# HAcollaboration

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/routes/: sessions.py
app/application/schemas/: session.py
app/application/services/: orchestration_service.py
app/core/: config.py
app/domain/services/: prioritization.py
app/infrastructure/llm/: __init__.py  client.py  prompt_builder.py
app/infrastructure/repositories/: session_repository.py
backend/: config.py  main.py  router.py
backend/api/: router.py
backend/api/routes/: dialogue.py  frontend.py  sessions.py
backend/application/schemas/: dialogue.py  session.py
backend/application/services/: dialogue_service.py  document_service.py  orchestration_service.py
backend/cli/: chat.py
backend/clients/: __init__.py  deepseek_client.py
backend/core/: config.py
backend/domain/models/: session.py
backend/domain/services/: prioritization.py
backend/models/: __init__.py  session.py
backend/repositories/: dialogue_repository.py
backend/routes/: dialogue.py  frontend.py
backend/schemas/: __init__.py  dialogue.py
backend/services/: car.py  cida.py  dialogue_service.py  document_service.py  prioritization.py
backend/static/: app.js  index.html  styles.css
docs/: architecture.md  workflow.md
frontend/: app.js  index.html  styles.css
prompts/system/: facilitator.md
prompts/workflows/: draft_generation.md  prioritization.md
tests/: test_dialogue_documents.py  test_health.py
(+3 files in other folders)
